Fix navbar link paths/running

--- a/running-game/running.html
+++ b/running-game/running.html
@@ -39,16 +39,16 @@
             <a class="nav-link" aria-current="page" href="../index.html"><p>Home</p></a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link " href="#"><p>Drag & Drop</p></a>
+            <a class="nav-link " href="../dress-the-elf/dressup.html"><p>Dress The Elf</p></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/running-game/running.html"><p>Running Game</p></a>
+            <a class="nav-link" href="#"><p>Running Game</p></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
+            <a class="nav-link" href="../gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/bingo/bingo.html"><p>Bingo</p></a>
+            <a class="nav-link" href="../bingo/bingo.html"><p>Bingo</p></a>
           </li>
         </ul>        
       </div>
