Update og tag image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="game" />
     <meta property="og:url" content="https://vicible2.github.io/ho-ho-holiday/" />
     <meta property="og:description" content="We all stuck at home for this Corona Christmas, why not get some fun with your friends and family online?"/>
-    <meta property=”og:image” content=”https://github.com/Vicible2/ho-ho-holiday/blob/main/landing-page/img/043-movie.png?raw=true” />
+    <meta property=”og:image” content="https://github.com/Vicible2/ho-ho-holiday/blob/main/landing-page/img/images.png?raw=true" />
 
     
     <!-- bootstrap cdn -->
