Try dropdown selection

--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -54,6 +54,9 @@
   
               <button id="submit">Add names</button>
           </div>
+
+          <select id="list" onchange="getSelectValue();">
+            </select>
   
       </form>
   
@@ -75,7 +78,7 @@
       <img src="image/snow.png" target="six" alt="sleigh">
   
 
-      
+      <label id="iblsmess"></label>
 
     </main>  
     <!-- footer start here     -->
