--- a/running-game/running.html
+++ b/running-game/running.html
@@ -2,55 +2,68 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holiday runner!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Holiday runner!</title>
 
-    <!-- Bootstrap cdn-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
-    
-    <!-- Running-Game css-->
-    <link rel="stylesheet" href="./css/running-style.css">
+  <!-- Bootstrap cdn-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 
-    <!-- Favicon insert-->
-    <link rel="shortcut icon" type="image/png" href="/navbar+footer/snowflake.png">
-    <!--FontAwesome cdn-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+  <!-- Running-Game css-->
+  <link rel="stylesheet" href="./css/running-style.css">
+
+
+  <!-- Favicon insert-->
+  <link rel="shortcut icon" type="image/png" href="/navbar+footer/snowflake.png">
+  <!--FontAwesome cdn-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+    integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
 </head>
 
 <body>
-<!-- Nav-Bar -->
+  <!-- Nav-Bar -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="../index.html">
         <h2 class="d-inline-block align-top" style="font-weight: 700;">Ho Ho Holiday</h2>
       </a>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="../index.html"><p>Home</p></a>
+            <a class="nav-link" aria-current="page" href="../index.html">
+              <p>Home</p>
+            </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link " href="../dress-the-elf/dressup.html"><p>Dress The Elf</p></a>
+            <a class="nav-link " href="../dress-the-elf/dressup.html">
+              <p>Dress The Elf</p>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><p>Running Game</p></a>
+            <a class="nav-link" href="#">
+              <p>Running Game</p>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
+            <a class="nav-link" href="../gift-generator/gitf-index.html">
+              <p>Gift Idea Generator</p>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../bingo/bingo.html"><p>Bingo</p></a>
+            <a class="nav-link" href="../bingo/bingo.html">
+              <p>Bingo</p>
+            </a>
           </li>
-        </ul>        
+        </ul>
       </div>
     </div>
   </nav>
@@ -65,15 +78,19 @@
     <div id="snow"></div>
 
     <div class="game-console">
+      <div class="santaGifs">
+        <div class="santaLeft"></div>
+        <div class="santaRight"></div>
+      </div>
       <div class="borderGame">
-          <div class="borderleft"></div>
-          <div class="bordermiddle"></div>
-          <div class="borderright"></div>
+        <div class="borderleft"></div>
+        <div class="bordermiddle"></div>
+        <div class="borderright"></div>
       </div>
       <div class="container-game">
-          <canvas class="game" id="gameContainer"></canvas>
-          <div class="tiles"></div>
-          <div class="moon"></div>
+        <canvas class="game" id="gameContainer"></canvas>
+        <div class="tiles"></div>
+        <div class="moon"></div>
       </div>
     </div>
 
@@ -83,13 +100,15 @@
 
   </main>
 
-    <!--Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-   
-    <!--<script src="./JS/running-app.js"></script> -->
-    <script src="./JS/app.js"></script>
-    <script src="./JS/snow.js"></script>
-    <!-- <script src="./JS/sound.js"></script> -->
+  <!--Bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+  </script>
+
+  <!--<script src="./JS/running-app.js"></script> -->
+  <script src="./JS/app.js"></script>
+  <script src="./JS/snow.js"></script>
+  <!-- <script src="./JS/sound.js"></script> -->
 </body>
 
 </html>
