--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -46,7 +46,7 @@
 
         
 
-
+      <div id="snow"></div>
       <div class="big-image">
         <img id="gift" src="image/045-sled.png">
       </div>
@@ -92,5 +92,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     
    <script src="gift-script.js"></script>
+   <script src="./snow.js"></script>
+
 </body>
 </html>
