Add sharing buttons to running-game

--- a/running-game/running.html
+++ b/running-game/running.html
@@ -70,7 +70,32 @@
   <!-- end of navbar -->
 
 
+  <div class="share-btn-container">
+    <a href="#" class="facebook-btn">
+      <i class="fab fa-facebook"></i>
+    </a>
+  
+    <a href="#" class="twitter-btn">
+      <i class="fab fa-twitter"></i>
+    </a>
+  
+    <a href="#" class="email-btn">
+      <i class="far fa-envelope"></i>        
+    </a>
+  
+    <a href="#" class="whatsapp-btn">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+  </div>
+
   <main>
+
+
+
+<!-- share section start -->
+
+
+<!-- share section end-->
 
 
 
@@ -108,6 +133,7 @@
   <!--<script src="./JS/running-app.js"></script> -->
   <script src="./JS/app.js"></script>
   <script src="./JS/snow.js"></script>
+  <script src="./JS/share.js"></script>
   <!-- <script src="./JS/sound.js"></script> -->
 </body>
 
