Add share section/Bingo

--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -10,6 +10,10 @@
     <title>Bingo</title>
     <!-- favicon insert -->
     <link rel="shortcut icon" type="image/png" href="../navbar+footer/snowflake.png">
+
+    <!-- fontawsome CDN -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
 </head>
 <body>
    
@@ -46,6 +50,25 @@
     </div>
   </nav>
   <!-- end of navbar -->
+
+  <!-- share section start -->
+  <div class="share-btn-container">
+    <a href="#" class="facebook-btn">
+      <i class="fab fa-facebook"></i>
+    </a>
+
+    <a href="#" class="twitter-btn">
+      <i class="fab fa-twitter"></i>
+    </a>
+
+    <a href="#" class="email-btn">
+      <i class="far fa-envelope"></i>        
+    </a>
+
+    <a href="#" class="whatsapp-btn">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+  </div>
 
   <!-- bingo start here -->
 
