Add fun gifs on top

--- a/running-game/running.html
+++ b/running-game/running.html
@@ -103,8 +103,12 @@
     <div id="snow"></div>
 
     <div class="game-console">
-      <div class="santaGifs">
+      <div class="gifs">
         <div class="santaLeft"></div>
+        <div class="evilElf"></div>
+        <div class="evilGift"></div>
+        <div class="evilElfRight"></div>
+        <div class="evilGiftRight"></div>
         <div class="santaRight"></div>
       </div>
       <div class="borderGame">
