add og tags and basic responsiveness

--- a/dress-the-elf/dressup.html
+++ b/dress-the-elf/dressup.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../common-css/style-common.css">
     <link href="dressup-style.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="../navbar+footer/snowflake.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
 
     <title>Dress the elf</title>
 </head>
@@ -43,26 +45,49 @@
             </div>
         </nav>
 
-    <!-- Dressup game -->
-        <main>
-            <div class="container">
-                <div class="explain">
-                    <h1>Dress the elf!</h1>
-                    <p>This little helper doesn't know what to wear to the party.
-                    Maybe you can help her pick out the right outfit?</p>
-                </div>
-                <div id="container-game">
-                    <div class="BlockWrapper BlockWrapper--isDropzone" id="wrapper">
-                        <img src="img/elfvectorbase.png" alt="elf" id="elf">
-                        <div class="clothes">
-                            <img src="img/greendress.png" alt="dress" class="draggable">
-                            <img src="img/elfdress.png" alt="dress" class="draggable">
-                            <img src="img/bluedress.png" alt="dress" class="draggable">
-                            <img src="img/christmasdress.png" alt="dress" class="draggable">
+    <!-- share section start -->
+        <div class="share-btn-container">
+            <a href="#" class="facebook-btn">
+                <i class="fab fa-facebook"></i>
+            </a>
+
+            <a href="#" class="twitter-btn">
+                <i class="fab fa-twitter"></i>
+            </a>
+
+            <a href="#" class="email-btn">
+                <i class="far fa-envelope"></i>
+            </a>
+
+            <a href="#" class="whatsapp-btn">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </div>
+
+
+    <main>
+            <!-- Dressup game -->
+
+           <div class="center">
+                <div class="container">
+                    <div class="explain">
+                        <h1>Dress the elf!</h1>
+                        <p>This little helper doesn't know what to wear to the party.
+                        Maybe you can help her pick out the right outfit?</p>
+                    </div>
+                    <div id="container-game">
+                        <div class="BlockWrapper BlockWrapper--isDropzone" id="wrapper">
+                            <img src="img/elfvectorbase.png" alt="elf" id="elf">
+                            <div class="clothes">
+                                <img src="img/greendress.png" alt="dress" class="draggable">
+                                <img src="img/elfdress.png" alt="dress" class="draggable">
+                                <img src="img/bluedress.png" alt="dress" class="draggable">
+                                <img src="img/christmasdress.png" alt="dress" class="draggable">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+           </div>
         </main>
 
 
