Change og img tag + update typo/landingpage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="game" />
     <meta property="og:url" content="https://vicible2.github.io/ho-ho-holiday/" />
     <meta property="og:description" content="We all stuck at home for this Corona Christmas, why not get some fun with your friends and family online?"/>
-    <meta property=”og:image” content="https://raw.githubusercontent.com/Vicible2/ho-ho-holiday/main/landing-page/img/images.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Vicible2/ho-ho-holiday/main/landing-page/img/images.png" />
 
     
     <!-- bootstrap cdn -->
@@ -234,7 +234,7 @@
 
         <div class="game-text-four">
 
-          <h3>To see your luck?</h3>
+          <h3>Bingo Game</h3>
           <p>Can you get a bingo with 4 of them in a row?</p>
           <a href="bingo/bingo.html"><p class="link-game-four">TRY IT OUT</p></a>
           <a href="#landingsection"><i class="fas fa-caret-up"></i></a>
