--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="gift-style.css">
     <link rel ="shortcut icon" type ='image/png' href="../navbar+footer/snowflake.png">
+     <!-- fontawsome CDN -->
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
 </head>
 <body>
     <!-- navbar start -->
@@ -43,7 +46,27 @@
 
     <main>
       <!-- your page content here  -->
+       <!-- share section start -->
+       <div class="share-btn-container">
+        <a href="#" class="facebook-btn">
+          <i class="fab fa-facebook"></i>
+        </a>
 
+        <a href="#" class="twitter-btn">
+          <i class="fab fa-twitter"></i>
+        </a>
+  
+        <a href="#" class="email-btn">
+          <i class="far fa-envelope"></i>        
+        </a>
+  
+        <a href="#" class="whatsapp-btn">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
+
+
+      
         
 
       <div id="snow"></div>
@@ -69,7 +92,8 @@
   
       <div class="output">
   
-          <select id="outputText">Lets see who is joining Secret Santa!</select>
+          <select id="outputText" >Lets see who is joining Secret Santa!</select>
+          </select>
           <p id="yourpair">Are you curious who will yours be ? </p>
       </div>
   
