Fix bud/replay btn show again even played twice (need to change opacity)

--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -14,6 +14,12 @@
     <!-- fontawsome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
+    <!-- OG tags start here -->
+    <meta property="og:title" content="Some Fun For the Holiday?"/>
+    <meta property="og:type" content="game" />
+    <meta property="og:url" content="https://vicible2.github.io/ho-ho-holiday/" />
+    <meta property="og:description" content="We all stuck at home for this Corona Christmas, why not get some fun with your friends and family online?"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/Vicible2/ho-ho-holiday/main/landing-page/img/images.png" />
 </head>
 <body>
    
